# research-core

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.githooks/: pre-commit
.github/: RELEASE_TEMPLATE.md
apps/nullforge-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/nullforge-desktop/src-tauri/capabilities/: default.json
apps/nullforge-desktop/src-tauri/src/: main.rs
docs/: ARCHITECTURE.md  README_ANALYSIS_ES5M.md  STATUS.md  ci_doctor_spec_v1.md  data_lake_spec_v1.md  dataset_catalog_spec_v1.md  drift_report_spec_v1.md  index.md  lineage_spec_v1.md  manifest_spec_v1.md  phase0_gates_v1.md  pilot_cohort_v1.md  pilot_ops_spec_v1.md  plan_spec_v1.md  project_spec_v1.md  prune_playbook.md  psa_spec_v1.md  runset_spec_v1.md
schemas/: baseline.card.schema.v1.json  baseline.diff.schema.v1.json  baseline.index.schema.v1.json  baseline.promotions.schema.v1.json  canon.schema.v1.json  ci.config.schema.v1.json  ci.doctor.config.schema.v1.json  ci.doctor.summary.schema.v1.json  ci.summary.schema.v1.json  colmap.raw_vendor_v1.json  dashboard.summary.schema.v1.json  dataset.catalog.schema.v1.json  drift.report.schema.v1.json  experiment.spec.schema.v1.json  lineage.schema.v1.json  manifest.schema.v1.json  pilot.ops.config.schema.v1.json  pilot.run.summary.schema.v1.json  plan.schema.v1.json  project.schema.v1.json  prune.policy.schema.v1.json  psa.report.schema.v1.json  psa.schema.v1.json  registry.schema.v1.json  risk.schema.v1.json  runset.schema.v1.json
tests/: _baseline_helpers.py  conftest.py  (+139 more)
(+630 files in other folders)
