[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-core"
version = "0.1.0"
description = "Research Core Phase 0 canonicalization system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
  "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
